--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^7.1.2",
-    "typescript": "^5.0.0"
+    "@types/howler": "^2.2.12",
+    "typescript": "^5.0.0",
+    "vite": "^7.1.2"
+  },
+  "dependencies": {
+    "howler": "^2.2.4"
   }
 }
