--- a/package.json
+++ b/package.json
@@ -1,16 +1,51 @@
 {
   "name": "cyber-survivor-ts",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
+  "main": "electron-main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:dev": "cross-env NODE_ENV=development concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
+    "electron:build": "npm run build && electron-builder",
+    "postinstall": "electron-builder install-app-deps"
+  },
+  "build": {
+    "appId": "com.cybersurvivor.app",
+    "productName": "CyberSurvivor",
+    "files": [
+      "dist/**/*",
+      "electron-main.js",
+      "preload.js",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "build"
+    },
+    "win": {
+      "target": [
+        { "target": "nsis", "arch": ["x64"] },
+        { "target": "portable", "arch": ["x64"] }
+      ],
+      "icon": "build/icon.ico"
+    },
+    "nsis": {
+      "oneClick": true,
+      "perMachine": false,
+      "allowElevation": true,
+      "allowToChangeInstallationDirectory": false
+    }
   },
   "devDependencies": {
     "@types/howler": "^2.2.12",
     "typescript": "^5.0.0",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "electron": "^30.0.0",
+    "electron-builder": "^24.9.1",
+    "concurrently": "^8.2.2",
+    "wait-on": "^7.2.0",
+    "cross-env": "^7.0.3"
   },
   "dependencies": {
     "howler": "^2.2.4"
