feat(core): cinematic restart + guaranteed initial upgrade; explosion shockwave & drone scaling

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "vite build",
     "preview": "vite preview",
     "electron:dev": "cross-env NODE_ENV=development concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
-  "electron:build": "npm run build && electron-builder",
-  "clean": "rimraf dist",
+  "electron:build": "npm run package:full",
+  "electron:builder": "npm run build && electron-builder",
+  "clean": "taskkill /F /IM CyberSurvivor.exe 2>nul || echo (exe not running) & rimraf dist release",
+  "release:clean": "npm run clean && npm run packager:win",
   "repackage": "npm run clean && npm run electron:build",
   "electron:zip": "npm run build && electron-builder --win zip",
   "dir": "npm run build && electron-builder --dir",
@@ -17,6 +19,9 @@
   "packager:win": "npm run build && npx @electron/packager . CyberSurvivor --platform=win32 --arch=x64 --out=release --overwrite --prune=false --ignore=\"(^/release$|^/tests)\"",
   "zip:packager": "npm run packager:win && powershell -Command Compress-Archive -Path release/CyberSurvivor-win32-x64/* -DestinationPath release/CyberSurvivor-win32-x64.zip -Force",
   "package:full": "npm run clean && npm run packager:win && node scripts/make-zip.js",
+  "release:devtools": "npm run clean && cross-env DEVTOOLS=1 npm run packager:win",
+  "release:baseline": "npm run clean && cross-env GFX=baseline npm run packager:win",
+  "release:minimal": "npm run clean && cross-env GFX=minimal npm run packager:win",
   "version:patch": "npm version patch -m 'chore(release): bump version to %s'",
   "postinstall": "electron-builder install-app-deps"
   },
