feat(security+tests): add sandboxed preload bridge, CSP, vitest setup & speed passive tests

--- a/package.json
+++ b/package.json
@@ -8,22 +8,26 @@
     "build": "vite build",
     "preview": "vite preview",
     "electron:dev": "cross-env NODE_ENV=development concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
-  "electron:build": "npm run package:full",
-  "electron:builder": "npm run build && electron-builder",
-  "clean": "taskkill /F /IM CyberSurvivor.exe 2>nul || echo (exe not running) & rimraf dist release",
-  "release:clean": "npm run clean && npm run packager:win",
-  "repackage": "npm run clean && npm run electron:build",
-  "electron:zip": "npm run build && electron-builder --win zip",
-  "dir": "npm run build && electron-builder --dir",
-  "zip:manual": "npm run dir && powershell -Command Compress-Archive -Path dist/win-unpacked/* -DestinationPath dist/CyberSurvivor-win64.zip -Force",
-  "packager:win": "npm run build && npx @electron/packager . CyberSurvivor --platform=win32 --arch=x64 --out=release --overwrite --prune=false --ignore=\"(^/release$|^/tests)\"",
-  "zip:packager": "npm run packager:win && powershell -Command Compress-Archive -Path release/CyberSurvivor-win32-x64/* -DestinationPath release/CyberSurvivor-win32-x64.zip -Force",
-  "package:full": "npm run clean && npm run packager:win && node scripts/make-zip.js",
-  "release:devtools": "npm run clean && cross-env DEVTOOLS=1 npm run packager:win",
-  "release:baseline": "npm run clean && cross-env GFX=baseline npm run packager:win",
-  "release:minimal": "npm run clean && cross-env GFX=minimal npm run packager:win",
-  "version:patch": "npm version patch -m 'chore(release): bump version to %s'",
-  "postinstall": "electron-builder install-app-deps"
+    "electron:build": "npm run package:full",
+    "electron:builder": "npm run build && electron-builder",
+    "clean": "taskkill /F /IM CyberSurvivor.exe 2>nul || echo (exe not running) & rimraf dist release",
+    "release:clean": "npm run clean && npm run packager:win",
+    "repackage": "npm run clean && npm run electron:build",
+    "electron:zip": "npm run build && electron-builder --win zip",
+    "dir": "npm run build && electron-builder --dir",
+    "zip:manual": "npm run dir && powershell -Command Compress-Archive -Path dist/win-unpacked/* -DestinationPath dist/CyberSurvivor-win64.zip -Force",
+    "packager:win": "npm run build && npx @electron/packager . CyberSurvivor --platform=win32 --arch=x64 --out=release --overwrite --prune=false --ignore=\"(^/release$|^/tests)\"",
+    "zip:packager": "npm run packager:win && powershell -Command Compress-Archive -Path release/CyberSurvivor-win32-x64/* -DestinationPath release/CyberSurvivor-win32-x64.zip -Force",
+    "package:full": "npm run clean && npm run packager:win && node scripts/make-zip.js",
+    "release:devtools": "npm run clean && cross-env DEVTOOLS=1 npm run packager:win",
+    "release:baseline": "npm run clean && cross-env GFX=baseline npm run packager:win",
+    "release:minimal": "npm run clean && cross-env GFX=minimal npm run packager:win",
+    "version:patch": "npm version patch -m 'chore(release): bump version to %s'",
+    "postinstall": "electron-builder install-app-deps",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "lint:security": "echo (placeholder for future security lint)"
   },
   "build": {
     "appId": "com.cybersurvivor.app",
@@ -60,8 +64,10 @@
     "concurrently": "^8.2.2",
     "wait-on": "^7.2.0",
     "cross-env": "^7.0.3",
-  "rimraf": "^5.0.5",
-  "@electron/packager": "^18.3.0"
+    "rimraf": "^5.0.5",
+    "@electron/packager": "^18.3.0",
+    "vitest": "^2.0.0",
+    "@types/node": "^20.0.0"
   },
   "dependencies": {
     "howler": "^2.2.4"
