--- a/package.json
+++ b/package.json
@@ -43,9 +43,24 @@
     },
     "win": {
       "target": [
-        { "target": "nsis", "arch": ["x64"] },
-        { "target": "portable", "arch": ["x64"] },
-        { "target": "zip", "arch": ["x64"] }
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        },
+        {
+          "target": "portable",
+          "arch": [
+            "x64"
+          ]
+        },
+        {
+          "target": "zip",
+          "arch": [
+            "x64"
+          ]
+        }
       ]
     },
     "nsis": {
@@ -56,18 +71,18 @@
     }
   },
   "devDependencies": {
+    "@electron/packager": "^18.3.0",
     "@types/howler": "^2.2.12",
-    "typescript": "^5.0.0",
-    "vite": "^7.1.2",
+    "@types/node": "^20.0.0",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "electron": "^30.0.0",
     "electron-builder": "^24.9.1",
-    "concurrently": "^8.2.2",
-    "wait-on": "^7.2.0",
-    "cross-env": "^7.0.3",
     "rimraf": "^5.0.5",
-    "@electron/packager": "^18.3.0",
-    "vitest": "^2.0.0",
-    "@types/node": "^20.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^7.1.2",
+    "vitest": "^3.2.4",
+    "wait-on": "^7.2.0"
   },
   "dependencies": {
     "howler": "^2.2.4"
