--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
+  "scripts": {
+    "test": "vitest run"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "google-auth-library": "^9.0.0"
+  "google-auth-library": "^9.0.0",
+  "redis": "^4.6.13"
+  },
+  "devDependencies": {
+    "vitest": "^1.6.0"
   }
 }
