--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ Thumbs.db
 # Protect against variations like 'Kore Demos', 'kore-demos', etc.
 [Kk]ore*Demos*/
 [Kk]ore*Demo*/
+
+# Environment (do not commit secrets)
+.env
+.env.local
+.env.*.local
