--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,22 @@
 {
   "name": "cybersurvivor-backend",
   "version": "1.0.0",
+  "private": true,
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "start": "node server.js",
+    "dev": "node server.js",
     "test": "vitest run"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-  "google-auth-library": "^9.0.0",
-  "redis": "^4.6.13"
+    "express": "^4.21.2",
+    "google-auth-library": "^9.15.1",
+    "redis": "^4.6.13"
   },
   "devDependencies": {
-    "vitest": "^1.6.0"
-  }
+    "vitest": "^3.2.4"
+  },
+  "engines": { "node": ">=18.0.0" }
 }
