feat(enemies): add enemy_eye to large type; remove cyan tint/flash for large; manifest entries for eye/spider

--- a/public/assets/manifest.json
+++ b/public/assets/manifest.json
@@ -12,6 +12,20 @@
       "w": 64,
       "h": 64,
       "frames": 1
+    },
+    "eye": {
+      "file": "assets/enemies/enemy_eye.png",
+      "w": 64,
+      "h": 64,
+      "frames": 1,
+      "optional": true
+    },
+    "spider": {
+      "file": "assets/enemies/enemy_spider.png",
+      "w": 64,
+      "h": 64,
+      "frames": 1,
+      "optional": true
     }
   },
   "player": {
