--- a/package.json
+++ b/package.json
@@ -18,24 +18,24 @@
   "sim:log": "node ./scripts/run-sim.cjs --sec=45 --seeds=1,2,3 --log=1 --logdir=sim-logs",
   "sim:log:short": "node ./scripts/run-sim.cjs --sec=10 --seeds=1,2 --log=1 --logdir=sim-logs-test",
   "sim:summary": "node ./scripts/summarize-logs.cjs --dir=sim-logs",
-  "sim:summary:json": "node ./scripts/summarize-logs.cjs --dir=sim-logs --json=1 --out=sim-logs-summary.json",
+  "sim:summary:json": "node ./scripts/summarize-logs.cjs --dir=sim-logs --json=1 --out=out/summaries/sim-logs-summary.json",
   "sim:summary:compare": "node ./scripts/compare-summaries.cjs --old=baseline-summary.json --new=sim-logs-summary.json --failKills=2",
   "sim:full": "node ./scripts/run-sim.cjs --sec=1200 --seeds=1,2,3 --log=1 --logdir=sim-logs-full",
   "sim:full:summary": "node ./scripts/summarize-logs.cjs --dir=sim-logs-full --json=1 --out=sim-logs-full-summary.json",
   "sim:full:compare": "node ./scripts/compare-summaries.cjs --old=baseline-summary.json --new=sim-logs-full-summary.json --failKills=2",
-  "sim:30s:loadouts": "node ./scripts/run-sim.cjs --sec=30 --seeds=1,2,3 --mode=NORMAL --loadout=scripts/loadouts.example.json --out=loadouts-30s-summary.json",
-  "sim:30s:pressure": "node ./scripts/run-sim.cjs --sec=30 --seeds=1,2,3 --mode=NORMAL --pressure=enabled:1,spawnRateMul:2,packSize:10,hpMul:1.4,speedMul:1.2,rampPerMin:0.5,eliteChance:0.1 --out=pressure-30s-summary.json",
-  "sim:snapshots": "node ./scripts/run-sim.cjs --sec=60 --seeds=1,2,3 --mode=NORMAL --pressure=enabled:1,rampPerMin:0.6,spawnRateMul:2,packSize:10,hpMul:1.4,speedMul:1.2 --minutes=15,20,25,30 --out=snapshots-60s-summary.json",
-  "sim:power:10s": "node ./scripts/run-sim.cjs --sec=10 --seeds=1,2,3 --power=1 --mode=NORMAL --out=power-10s.json",
-  "sim:power:30s": "node ./scripts/run-sim.cjs --sec=30 --seeds=1,2,3 --power=1 --mode=NORMAL --out=power-30s.json",
-  "sim:power:pressure": "node ./scripts/run-sim.cjs --sec=30 --seeds=1,2,3 --power=1 --mode=NORMAL --pressure=enabled:1,spawnRateMul:2,packSize:10,hpMul:1.4,speedMul:1.2,rampPerMin:0.5,eliteChance:0.1 --out=power-pressure-30s.json",
-  "sim:power:snapshots": "node ./scripts/run-sim.cjs --sec=60 --seeds=1,2,3 --power=1 --mode=NORMAL --pressure=enabled:1,rampPerMin:0.6,spawnRateMul:2,packSize:10,hpMul:1.4,speedMul:1.2 --minutes=15,20,25,30 --out=power-snapshots-60s.json",
+  "sim:30s:loadouts": "node ./scripts/run-sim.cjs --sec=30 --seeds=1,2,3 --mode=NORMAL --loadout=scripts/loadouts.example.json --out=out/summaries/loadouts-30s-summary.json",
+  "sim:30s:pressure": "node ./scripts/run-sim.cjs --sec=30 --seeds=1,2,3 --mode=NORMAL --pressure=enabled:1,spawnRateMul:2,packSize:10,hpMul:1.4,speedMul:1.2,rampPerMin:0.5,eliteChance:0.1 --out=out/pressure/pressure-30s-summary.json",
+  "sim:snapshots": "node ./scripts/run-sim.cjs --sec=60 --seeds=1,2,3 --mode=NORMAL --pressure=enabled:1,rampPerMin:0.6,spawnRateMul:2,packSize:10,hpMul:1.4,speedMul:1.2 --minutes=15,20,25,30 --out=out/snapshots/snapshots-60s-summary.json",
+  "sim:power:10s": "node ./scripts/run-sim.cjs --sec=10 --seeds=1,2,3 --power=1 --mode=NORMAL --out=out/summaries/power-10s.json",
+  "sim:power:30s": "node ./scripts/run-sim.cjs --sec=30 --seeds=1,2,3 --power=1 --mode=NORMAL --out=out/summaries/power-30s.json",
+  "sim:power:pressure": "node ./scripts/run-sim.cjs --sec=30 --seeds=1,2,3 --power=1 --mode=NORMAL --pressure=enabled:1,spawnRateMul:2,packSize:10,hpMul:1.4,speedMul:1.2,rampPerMin:0.5,eliteChance:0.1 --out=out/pressure/power-pressure-30s.json",
+  "sim:power:snapshots": "node ./scripts/run-sim.cjs --sec=60 --seeds=1,2,3 --power=1 --mode=NORMAL --pressure=enabled:1,rampPerMin:0.6,spawnRateMul:2,packSize:10,hpMul:1.4,speedMul:1.2 --minutes=15,20,25,30 --out=out/snapshots/power-snapshots-60s.json",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
   "lint:security": "echo (placeholder for future security lint)",
-  "pf": "node .\\scripts\\power-factor.cjs --level=7 --timeMin=15 --out=pf-output.json",
-  "pf:l1": "node .\\scripts\\power-factor.cjs --level=1 --timeMin=5 --out=pf-l1.json",
-  "pf:l7": "node .\\scripts\\power-factor.cjs --level=7 --timeMin=25 --out=pf-l7.json"
+  "pf": "node .\\scripts\\power-factor.cjs --level=7 --timeMin=15 --out=out/pf/pf-output.json",
+  "pf:l1": "node .\\scripts\\power-factor.cjs --level=1 --timeMin=5 --out=out/pf/pf-l1.json",
+  "pf:l7": "node .\\scripts\\power-factor.cjs --level=7 --timeMin=25 --out=out/pf/pf-l7.json"
   },
   "build": {},
   "engines": {
