--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "dev": "vite",
     "build:renderer": "vite build",
     "build": "vite build",
+    "build:clean": "npm run clean:all && vite build",
     "preview": "vite preview",
     "backend": "echo backend removed",
     "clean": "rimraf dist",
+    "clean:all": "rimraf dist node_modules/.vite node_modules/.cache .vite",
     "version:patch": "npm version patch -m 'chore(release): bump version to %s'",
     "postinstall": "echo (no electron postinstall)",
     "test": "vitest run",
